ARTEMIS-2162 Remove -XX:+AggressiveOpts to improve JDK 11 compatibility